Add launcher binary

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,14 @@
 cmake_minimum_required(VERSION 3.16)
 
+# Common stuff
+
+# You might need to adjust this
+set(SHLWAPI_PATH /usr/x86_64-w64-mingw32/mingw/lib/libshlwapi.a)
+
 set(CMAKE_C_COMPILER x86_64-w64-mingw32-gcc)
 set(CMAKE_CXX_COMPILER x86_64-w64-mingw32-g++)
+
+# Injected library
 
 project(mhynot2 VERSION 1.0.0 DESCRIPTION "mhyprot2 user-mode emulator")
 
@@ -30,6 +37,16 @@ target_include_directories(mhynot2 PRIVATE mhynot2-rewritten)
 target_include_directories(mhynot2 PRIVATE minhook/include)
 
 target_link_libraries(mhynot2 ${CMAKE_SOURCE_DIR}/minhook/libMinHook.a)
-target_link_libraries(mhynot2 /usr/x86_64-w64-mingw32/mingw/lib/libshlwapi.a)
+target_link_libraries(mhynot2 ${SHLWAPI_PATH})
 
 target_link_options(mhynot2 PRIVATE -static-libgcc -static-libstdc++)
+
+# Launcher executable
+
+project(launcher VERSION 1.0.0 DESCRIPTION "DLL Injector for Genshin")
+
+add_executable(launcher WIN32
+    launcher/launcher.cpp
+)
+
+target_link_libraries(launcher ${SHLWAPI_PATH})
