Refactor CMakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,21 +1,10 @@
 cmake_minimum_required(VERSION 3.16)
 
-# Common stuff
-
-# You might need to adjust this
-set(MINGW_PATH /usr/x86_64-w64-mingw32)
-
-set(SHLWAPI_PATH ${MINGW_PATH}/mingw/lib/libshlwapi.a)
-set(WINPTHREAD_PATH ${MINGW_PATH}/usr/lib/libwinpthread.a)
-
-set(CMAKE_C_COMPILER x86_64-w64-mingw32-gcc)
-set(CMAKE_CXX_COMPILER x86_64-w64-mingw32-g++)
+set (CMAKE_SYSTEM_NAME Windows)
 
 # Injected library
 
 project(mhynot2 VERSION 1.0.0 DESCRIPTION "mhyprot2 user-mode emulator")
-
-add_compile_definitions(mhynot2 UNICODE)
 
 add_library(mhynot2 SHARED
     mhynot2-rewritten/Common.cpp
@@ -27,23 +16,17 @@ add_library(mhynot2 SHARED
     mhynot2-rewritten/PassthroughBackend.cpp
 )
 
-# Really hacky way, but I wasn't able to figure a better one
-#set_target_properties(mhynot2 PROPERTIES VERSION ${PROJECT_VERSION})
-set_target_properties(mhynot2 PROPERTIES VERSION dll)
-set_target_properties(mhynot2 PROPERTIES PREFIX "")
-#set_target_properties(mhynot2 PROPERTIES SUFFIX .dll)
-set_target_properties(mhynot2 PROPERTIES SUFFIX "")
+target_compile_features(mhynot2 PRIVATE cxx_std_17)
 
-set_target_properties(mhynot2 PROPERTIES SOVERSION 1)
-
+add_subdirectory(minhook)
+target_compile_definitions(mhynot2 PRIVATE UNICODE)
 target_include_directories(mhynot2 PRIVATE mhynot2-rewritten)
-target_include_directories(mhynot2 PRIVATE minhook/include)
+target_link_libraries(mhynot2 minhook shlwapi)
 
-target_link_libraries(mhynot2 ${CMAKE_SOURCE_DIR}/minhook/libMinHook.a)
-target_link_libraries(mhynot2 ${SHLWAPI_PATH})
-target_link_libraries(mhynot2 ${WINPTHREAD_PATH})
-
-target_link_options(mhynot2 PRIVATE -static-libgcc -static-libstdc++)
+if (MINGW)
+    target_link_libraries(mhynot2 winpthread)
+    target_link_options(mhynot2 PRIVATE -static-libgcc -static-libstdc++ -static)
+endif()
 
 # Launcher executable
 
@@ -53,4 +36,4 @@ add_executable(launcher WIN32
     launcher/launcher.cpp
 )
 
-target_link_libraries(launcher ${SHLWAPI_PATH})
+target_link_libraries(launcher shlwapi)
